--- a/community/webkit2gtk/build
+++ b/community/webkit2gtk/build
@@ -4,30 +4,20 @@ export DESTDIR="$1"
 
 export CCACHE_SLOPPINESS=time_macros,include_file_mtime
 
-if find . -name '*.patch' | grep patch; then
-    for p in *.patch; do
-        patch -p1 < "$p"
-    done
-fi 
-
-# Use libsoup3, if available. This changes the webkit version from 4.0 to 4.1.
-pkg-config --exists libsoup-3.0 && libsoup=OFF
-
-# Enable the use of openjpeg if the package is installed.
-pkg-config --exists libopenjp2 && jpeg=ON
+# Silence loud warnings. Source: Chimera linux
+export CFLAGS="$CFLAGS -DNDEBUG"
+export CXXFLAGS="$CXXFLAGS -DNDEBUG -Wno-deprecated-declarations -Wno-deprecated-copy"
 
 # Use clang if installed, decreases compilation time by 25%.
 if command -v clang; then
-    export CC=clang
-    export CXX=clang++
-    if command -v lld; then
-        export LDFLAGS="$LDFLAGS -fuse-ld=lld"
-    fi
+	export CC=clang 
+	export CXX=clang++
 fi
 
-# Sbase does not have ln -n flag. So we have to remove it
+# fix unsupported -n or -h flag for sbase ln
 sed 's/ln -sfh/ln -sf/g' Source/WebCore/Scripts/generate-derived-sources.sh > _
 mv -f _ Source/WebCore/Scripts/generate-derived-sources.sh
+chmod 755 Source/WebCore/Scripts/generate-derived-sources.sh
 
 sed 's/ln -n -s -f/ln -sf/g' Source/JavaScriptCore/GLib.cmake > _
 mv -f _ Source/JavaScriptCore/GLib.cmake
@@ -40,7 +30,7 @@ mv -f _ Source/WebKit/PlatformWPEDeprecated.cmake
 
 sed 's/ln -n -s -f/ln -sf/g' Source/WebKit/PlatformGTKDeprecated.cmake  > _
 mv -f _ Source/WebKit/PlatformGTKDeprecated.cmake
-
+ 
 # Remove gettext requirement.
 sed 's/ngettext/printf/g' Tools/MiniBrowser/gtk/BrowserDownloadsBar.c > _
 mv -f _ Tools/MiniBrowser/gtk/BrowserDownloadsBar.c
@@ -57,64 +47,49 @@ mv -f _ Source/JavaScriptCore/jsc.cpp
 
 # Webkit's CMake configuration forces color output using clang-specific flags
 # when using Ninja as the CMAKE_GENERATOR. We should disable them.
-sed "s/-fcolor-diagnostics//" Source/cmake/WebKitCompilerFlags.cmake > _
+sed -e "s/-fcolor-diagnostics//"  \
+	-e "s/-fdiagnostics-color=always/-fdiagnostics-color=never/" \
+	Source/cmake/WebKitCompilerFlags.cmake > _
 mv -f _ Source/cmake/WebKitCompilerFlags.cmake
 
 # Reduce memory usage.
 export LDFLAGS="$LDFLAGS -Wl,--no-keep-memory"
 
-# If using mold as system linker, switch since mold cannot link all of webkit (yet).
-if ld --version | grep mold; then
-    for linker in ld.bfd ld.lld ld.gold; do
-        if command -v "$linker"; then
-            ln -s "/usr/bin/$linker" ld
-            break
-        fi
-    done
-    export PATH="$PWD:$PATH"
-fi
-
-cmake -B build \
+cmake -G Ninja -B build \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DCMAKE_INSTALL_LIBEXECDIR=/usr/lib \
     -DLIB_INSTALL_DIR=/usr/lib \
     -DPORT=GTK \
     -DCMAKE_SKIP_RPATH=ON \
-    -DENABLE_TOOLS=OFF \
     -DENABLE_API_TESTS=OFF \
     -DENABLE_BUBBLEWRAP_SANDBOX=OFF \
-    -DENABLE_SAMPLING_PROFILER=OFF \
-    -DENABLE_GEOLOCATION=OFF \
-    -DENABLE_GLES2=ON \
-    -DENABLE_INTROSPECTION=OFF \
-    -DENABLE_DOCUMENTATION=OFF \
-    -DENABLE_MINIBROWSER=OFF \
-    -DENABLE_SPELLCHECK=OFF \
-    -DUSE_GSTREAMER_TRANSCODER=ON \
-    -DUSE_SOUP2="${libsoup:-ON}" \
-    -DUSE_LIBHYPHEN=OFF \
-    -DUSE_LIBNOTIFY=OFF \
-    -DUSE_LIBSECRET=OFF \
-    -DUSE_SKIA=OFF \
-    -DUSE_OPENJPEG="${jpeg:-OFF}" \
-    -DUSE_JPEGXL=OFF \
-    -DUSE_SYSTEMD=OFF \
-    -DUSE_WOFF2=OFF \
-    -DUSE_WPE_RENDERER=OFF \
-    -DUSE_AVIF=OFF \
-    -DUSE_LIBBACKTRACE=OFF \
-    -DUSE_GTK4=OFF \
-    -DUSE_SYSTEM_MALLOC=ON \
-    -DUSE_SYSTEM_SYSPROF_CAPTURE=OFF \
-    -DENABLE_WEB_CRYPTO=OFF \
-    -DENABLE_GAMEPAD=OFF \
-    -DENABLE_JOURNALD_LOG=OFF \
-    -DENABLE_WAYLAND_TARGET=OFF \
-    -DENABLE_JIT=ON \
     -DENABLE_C_LOOP=OFF \
+    -DENABLE_DOCUMENTATION=OFF \
+    -DENABLE_GAMEPAD=OFF \
+    -DENABLE_GEOLOCATION=OFF \
+    -DENABLE_INTROSPECTION=OFF \
+    -DENABLE_JIT=OFF \
+    -DENABLE_JOURNALD_LOG=OFF \
+    -DENABLE_MINIBROWSER=OFF \
+    -DENABLE_PDFJS=OFF \
+    -DENABLE_SAMPLING_PROFILER=OFF \
+    -DENABLE_SPELLCHECK=OFF \
+    -DENABLE_WAYLAND_TARGET=OFF \
+    -DUSE_AVIF=OFF \
+    -DUSE_GSTREAMER_GL=ON \
+    -DUSE_GSTREAMER_TRANSCODER=ON \
+    -DUSE_GTK4=OFF \
+    -DUSE_JPEGXL=OFF \
     -DUSE_LCMS=OFF \
+    -DUSE_LIBBACKTRACE=OFF \
+    -DUSE_LIBHYPHEN=OFF \
+    -DUSE_LIBSECRET=OFF \
+    -DUSE_SOUP2=OFF \
+    -DUSE_WOFF2=OFF \
+    -DUSE_SKIA=OFF \
+    -DUSE_SYSTEM_SYSPROF_CAPTURE=NO \
     -Wno-dev
 
-cmake --build build
-cmake --install build
+samu -C build
+samu -C build install
